--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "express": "^4.19.2",
     "mongoose": "^8.5.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "validator": "^13.12.0"
   }
 }
